--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
     <section id="contact" class="py-24 bg-hero text-white text-center section-sep">
       <div class="container mx-auto px-6">
         <h2 class="text-4xl md:text-5xl font-extrabold mb-4">Next steps</h2>
-        <p class="text-white/80 mb-10">Send a message — we’ll reply quickly.</p>
+        <p class="text-white/80 mb-10">Send a message</p>
 
         <div class="max-w-2xl mx-auto text-left card p-8">
           <form id="contactForm" class="space-y-4">
