--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
 
         <!-- SEO-friendly, human line (does more than logo alt text alone) -->
         <p class="text-white/70 mb-10 max-w-4xl mx-auto">
-          We’ve worked with artists, labels and teams including <span class="text-white/90 font-semibold">Allie X</span>,
+          We’ve worked with artists, labels and teams including <span class="text-white/90 font-semibold">Island Records UK</span>,
           <span class="text-white/90 font-semibold">Mushroom Group</span>, <span class="text-white/90 font-semibold">AWAL</span>,
           <span class="text-white/90 font-semibold">Columbia Records</span> and more — building systems that scale beyond individual campaigns.
         </p>
